--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -8,7 +8,7 @@
 <div class="container">
 <h2>Login</h2>
 
-<form action="/login" method="post">
+<form action="/login" method="post" onsubmit="return validateForm()">
   <div class="imgcontainer">
     <img src="https://www.w3schools.com/howto/img_avatar2.png" alt="Avatar" class="avatar">
   </div>
@@ -16,10 +16,11 @@
   <div class="container">
     <h3 style="color: red;">  {{Useralreadyexists}}</h3>
     <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required
+    <input type="text" placeholder="Enter Email" name="email" id="email1" required
+    <span id = "emailMsg" style="color:red"> </span> <br><br>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password" name="psw" id ="psw1" required>
         
     <button type="submit">Login</button>
     
