change in weather api

--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -44,7 +44,7 @@
        
 
 
-            <form style="margin-right: auto;margin-left: auto; border :teal;" action="/weather" method="POST">
+            <form action="/weather" method="POST" style="margin-right: auto;margin-left: auto; border :teal;" >
               <div class="form-group">
                 <label for="fname">Enter City:</label>
                 <input type="text" class="form-control" id="cityName" name="fname" value="">
