change in weather api

--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -9,7 +9,7 @@
 <div class="container">
 <h2>Login</h2>
 
-<form action="/login" method="post" onsubmit="return validateForm()">
+<form action="/login" method="POST" onsubmit="return validateForm()">
   <div class="imgcontainer">
     <img src="https://www.w3schools.com/howto/img_avatar2.png" alt="Avatar" class="avatar">
   </div>
@@ -17,7 +17,7 @@
   <div class="container">
     <h3 style="color: red;">  {{Useralreadyexists}}</h3>
     <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" id="email1" required
+    <input type="text" placeholder="Enter Email" name="email" id="email1" required>
     <span id = "emailMsg" style="color:red"> </span> <br><br>
 
     <label for="psw"><b>Password</b></label>
