--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -21,8 +21,8 @@
   </div>
 </nav>
 
- 
-    <h1 class="center2" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Weather App</h1>
+<div class="container">
+      <h1 class="center2" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Weather App</h1>
 
        <div class="container center"  >
       
@@ -54,6 +54,9 @@
               <input type="submit" value="Search" id="submitBtn">
             </form>
       </div>
+</div>
+ 
+    
     
 
     
@@ -71,8 +74,6 @@
      
 
 <script src="js/date.js"></script>
-{{!-- <script src="js/main.js"></script> --}}
-
        
   
   </body>
