--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -21,7 +21,7 @@
     <span id = "blankMsg" style="color:red"> </span> <br><br> 
 
     <label for="lname"><b>Last Name</b></label>
-    <input type="text" placeholder="Enter Last Name" name="lname" id="lname1" required onclick="myFunction()">
+    <input type="text" placeholder="Enter Last Name" name="lname" id="lname1" required>
     <span id = "charMsg" style="color:red"> </span> <br><br> 
 
     <label for="email"><b>Email</b></label>
