--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -1,50 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-   {{>header}}
-    <link rel="stylesheet" href="css/weather.css">
-  </head>
-  <body>
-   <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">Welcome</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
-     
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> {{Login}}</a></li>
-    </ul>
-  </div>
-</nav>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    {{>header}}
+</head>
+<body>
+    {{>navbar}}
 
-<div class="container">
-      <h1 class="center2" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Weather App</h1>
-
-       <div class="container center"  >
+  
+ <div class="container">
+   
+    
+    <div class="jumbotron">
+  <h1 class="display-4">Weather App</h1>
+  <p class="lead">{{LocationCountry}}</p>
+  <p class="lead" id="date"></p>
+     <p class="lead">{{temp}} </p>          
       
-      
-         <div class="card bg text-white " >
-         
-           <div class="card-body" style="color: seashell;">
-                 <h2 id="city_name">{{LocationCountry}}</h2>
-            
-                <p id="date"></p>
-                <h4 id='temp_real_val'>{{temp}}</h4>
-                <h4 id="min">
-                  {{min}}
-                </h4>
-            </div>
-        </div>
-        <br>
-        <br>
-       
+                  
+               
 
-
-            <form action="/weather" method="POST" style="margin-right: auto;margin-left: auto; border :teal;" >
+  
+  <hr class="my-4">
+   <form action="/weather" method="POST" style="margin-right: auto;margin-left: auto; border :teal;" >
               <div class="form-group">
                 <label for="fname">Enter City:</label>
                 <input type="text" class="form-control" id="cityName" name="fname" value="">
@@ -53,28 +33,13 @@
               
               <input type="submit" value="Search" id="submitBtn">
             </form>
-      </div>
+  
 </div>
- 
-    
-    
 
-    
-  
- 
-   
-          
-      
-   
-     
+</div>
 
-    
- 
-        
-     
 
+<script></script>
 <script src="js/date.js"></script>
-       
-  
-  </body>
+</body>
 </html>
