--- a/templates/partials/content.hbs
+++ b/templates/partials/content.hbs
@@ -2,7 +2,7 @@
    
     
     <div class="jumbotron">
-  <h1 class="display-4">Hello</h1>
+  <h1 class="display-4"> Weather App</h1><br>
   <p class="lead">Access current weather data for any location on Earth including over 200,000 cities! The data is frequently updated based on global and local weather models, satellites, radars and vast network of weather stations.</p>
   <hr class="my-4">
   <p>To check current weather of your city, you need to login. Click Below</p>
