--- a/templates/partials/content.hbs
+++ b/templates/partials/content.hbs
@@ -1,8 +1,8 @@
  <div class="container">
    
     
-    <div class="jumbotron">
-  <h1 class="display-4"> Weather App</h1><br>
+    <div class="jumbotron" style="position: relative">
+  <h1 class="display-4"> Weather App <img class="sun"   src="https://www.flaticon.com/svg/vstatic/svg/2917/2917242.svg?token=exp=1611034431~hmac=0d7ba2658a4d27694fe30151292d6805" alt=""></h1><br>
   <p class="lead">Access current weather data for any location on Earth including over 200,000 cities! The data is frequently updated based on global and local weather models, satellites, radars and vast network of weather stations.</p>
   <hr class="my-4">
   <p>To check current weather of your city, you need to login. Click Below</p>
