--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -11,7 +11,7 @@
 
 <form action="/login" method="POST" onsubmit="return validateForm()">
   <div class="imgcontainer">
-    <img src="https://www.w3schools.com/howto/img_avatar2.png" alt="Avatar" class="avatar">
+    <img src="images/profile-user.png" alt="Avatar" class="avatar">
   </div>
 
   <div class="container">
@@ -23,8 +23,10 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" id ="psw1" required>
         
-    <button type="submit">Login</button>
+    <button class="btn btn-primary btn-lg" type="submit">Login</button> 
+     
     
+  
   </div>
 
   
