--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -12,7 +12,7 @@
 
 <form action="/register" method="POST" onsubmit="return validateForm()">
   <div class="imgcontainer">
-    <img src="https://www.w3schools.com/howto/img_avatar2.png" alt="Avatar" class="avatar">
+    <img src="images/profile-user.png" alt="Avatar" class="avatar">
   </div>
 
   <div class="container" >
@@ -39,7 +39,7 @@
     <span id = "message2" style="color:red"> </span> <br><br>  
  
 
-    <button type="submit">Register</button>
+    <button class="btn btn-primary btn-lg" type="submit">Register</button>
    
   </div>
 
