--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,6 +60,19 @@ span.psw {
   top : 5%;
 }
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color:#222222;
+  color: white;
+  text-align: center;
+}
+
+.foot{
+  margin-bottom: 4px;
+}
 
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
