add logout feature

--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -2,6 +2,15 @@
 <html>
 <head>
     {{>header}}
+     <style>
+        #logout{
+            display: none;
+        }
+        #logoutall{
+            display: none;
+        }
+       
+    </style>
     <script src="js/loginvalidatiion.js"></script>
 </head>
 <body>
