--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -62,6 +62,15 @@ span.psw {
   animation: rot 6s linear infinite;
 }
 
+.weathericon{
+  width: 20%;
+  position: absolute;
+  right: 5%;
+  top : 5%;
+  transition: all linear;
+  animation: shake 6s linear infinite;
+}
+
 .footer {
   position: fixed;
   left: 0;
@@ -71,6 +80,7 @@ span.psw {
   color: white;
   text-align: center;
 }
+
 
 
 
@@ -108,4 +118,10 @@ span.psw {
   100%{
     transform: rotate(360deg);
   }
+}
+
+@keyframes shake {
+  0%, 100% {transform: translateX(0);} 
+  10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);} 
+  20%, 40%, 60%, 80% {transform: translateX(10px);} 
 }
