--- a/templates/partials/content.hbs
+++ b/templates/partials/content.hbs
@@ -1,7 +1,7 @@
  <div class="container">
    
     
-    <div class="jumbotron" style="position: relative">
+    <div class="jumbotron" style="position: relative;background-color:#add8e6">
   <h1 class="display-4"> Weather App <img class="sun"   src="images/sun.png" alt=""></h1><br>
   <p class="lead">Access current weather data for any location on Earth including over 200,000 cities! The data is frequently updated based on global and local weather models, satellites, radars and vast network of weather stations.</p>
   <hr class="my-4">
