--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -5,12 +5,14 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">Home</a></li>
-      
-     
     </ul>
+
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li id="signup"><a href="/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li id="login"><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li id="logout"><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+      <li id="logoutall"><a href="/logoutall"><span class="glyphicon glyphicon-log-in"></span> Logout of all Devices</a></li>
     </ul>
+
   </div>
 </nav>
