--- a/templates/views/indexafter.hbs
+++ b/templates/views/indexafter.hbs
@@ -4,10 +4,10 @@
     
     {{>header}}
     <style>
-        #logout{
+        #login{
             display: none;
         }
-        #logoutall{
+        #signup{
             display: none;
         }
     </style>
