--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -3,31 +3,23 @@
 <head>
     
     {{>header}}
+     <style>
+        #login{
+            display: none;
+        }
+        #signup{
+            display: none;
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">Welcome</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
-      
-     
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> {{Login}}</a></li>
-    </ul>
-  </div>
-</nav>
-
+ {{>navbar}}
   
  <div class="container">
    
     
-    <div class="jumbotron">
-  <h1 class="display-4">Weather App</h1>
+    <div class="jumbotron"  style="position: relative;background-color:#add8e6">
+  <h1 class="display-4">Weather App<img class="weathericon"  src={{image}} ></h1><br>
   <p class="lead">{{LocationCountry}}</p>
   <p class="lead" id="date"></p>
      <p class="lead">{{temp}} </p>          
@@ -36,7 +28,7 @@
                
 
   
-  <hr class="my-4">
+  <hr style="height:2px;border-width:0;color:gray;background-color:gray">
    <form action="/weather" method="POST" style="margin-right: auto;margin-left: auto; border :teal;" >
               <div class="form-group">
                 <label for="fname">Enter City:</label>
