--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,18 +1,25 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Welcome</a>
+     
+      <a class="navbar-brand" href="/"> 
+        <img src="https://www.flaticon.com/svg/vstatic/svg/2917/2917242.svg?token=exp=1611880585~hmac=33817924e60adec3374f50222758ef19" alt="" width="30" height="30" style="display: inline;"> 
+        Weather App</a>
+      <button style="width: auto;" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
-    </ul>
-
-    <ul class="nav navbar-nav navbar-right">
-      <li id="signup"><a href="/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li id="login"><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      <li id="logout"><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
-      <li id="logoutall"><a href="/logoutall"><span class="glyphicon glyphicon-log-in"></span> Logout of all Devices</a></li>
-    </ul>
-
+    <div class="collapse navbar-collapse" id="myNavbar">
+     
+      <ul class="nav navbar-nav navbar-right">
+        
+      <li id="signup"><a href="/register"><span class="glyphicon glyphicon-user"></span>  Sign Up</a></li>
+      <li id="login"><a href="/login"><span class="glyphicon glyphicon-log-in"></span>  Login</a></li>
+      <li id="logout"><a href="/logout"><span class="glyphicon glyphicon-log-out"></span>  Logout</a></li>
+      <li id="logoutall"><a href="/logoutall"><span class="glyphicon glyphicon-log-out"></span>  Logout of all Devices</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
