add logout feature

--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -3,7 +3,7 @@
     <div class="navbar-header">
      
       <a class="navbar-brand" href="/"> 
-        <img src="https://www.flaticon.com/svg/vstatic/svg/2917/2917242.svg?token=exp=1611880585~hmac=33817924e60adec3374f50222758ef19" alt="" width="30" height="30" style="display: inline;"> 
+        <img src="images/sun.png" alt="" width="30" height="30" style="display: inline;"> 
         Weather App</a>
       <button style="width: auto;" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
