add logout feature

--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,5 +1,14 @@
-<div class="footer">
+{{!-- <div class="footer">
   <p class="foot">&#169;&nbsp; Shivam Garg</p>
 </div>
 
 
+ --}}
+ <footer class="footer text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center foot">
+    © 2021 Copyright :
+    <a href="/" style="color:whitesmoke;">Weather App</a>
+  </div>
+  <!-- Copyright -->
+</footer>
