--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -34,7 +34,9 @@
         
     <button class="btn btn-primary btn-lg" type="submit">Login</button> 
      
-    
+    <br>
+  <br>
+    <a href="/register"><p style="font-weight: 600; letter-spacing:0.20px;">  Create account</p></a>
   
   </div>
 
