--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -49,7 +49,9 @@
  
 
     <button class="btn btn-primary btn-lg" type="submit">Register</button>
-   
+   <br>
+  <br>
+    <a href="/login">  <p style="font-weight: 600; letter-spacing:0.20px;">  Sign in instead </p> </a>
   </div>
 
   
