add logout feature

--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -11,7 +11,7 @@
         }
        }
     </style>
-    <script src="js/loginvalidatiion.js"></script>
+   
 </head>
 <body>
 {{>navbar}}
@@ -46,5 +46,7 @@
 <br>
 <br><br>
 {{>footer}}
+{{script}}
+ <script src="js/loginvalidatiion.js"></script>
 </body>
 </html>
