--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -2,7 +2,7 @@
 <html>
 <head>
 {{>header}}
-<script src="js/registervalidation.js"></script>
+
  <style>
         #logout{
             display: none;
@@ -62,6 +62,7 @@
 <br>
 <br><br>
 {{>footer}}
-
+{{script}}
+<script src="js/registervalidation.js"></script>
 </body>
 </html>
