--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -2,7 +2,8 @@
 <link rel="stylesheet" href="css/styles.css">
  <link rel="icon" href="images/sun.png" type="image/gif" sizes="16x16">
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <title>Weather App</title>
 
 
