--- a/templates/partials/indexheader.hbs
+++ b/templates/partials/indexheader.hbs
@@ -1,8 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="images/sun.png" type="image/gif" sizes="16x16">
 
-<link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> 
+<link rel="stylesheet" href="css/indexstyles.css">
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
